--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<artifactId>runcontrolgenerator</artifactId>
 	<version>1.0.2</version>
-	<packaging>jar</packaging>
+	<!-- <packaging>jar</packaging> -->
 
 	<name>GenevaERS Run Control Generator</name>
 	<url>https://genevaers.org/</url>
