--- a/GenevaIO/pom.xml
+++ b/GenevaIO/pom.xml
@@ -78,7 +78,21 @@
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-yaml</artifactId>
 		</dependency>
-				
+			<dependency>
+				<groupId>com.ibm</groupId>
+				<artifactId>db2jcc_license_cu</artifactId>
+				<version>4</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ibm</groupId>
+				<artifactId>db2jcc4</artifactId>
+				<version>4</version>
+			</dependency>
+			<dependency>
+				<groupId>com.ibm</groupId>
+				<artifactId>db2jcc_license_cisuz</artifactId>
+				<version>4</version>
+			</dependency>
 	</dependencies>
 
 	<build>
