JSTRFN changed test names
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/PETestFramework/spec/PeTests/Function/JSTRFN.yaml
+++ b/PETestFramework/spec/PeTests/Function/JSTRFN.yaml
@@ -26,7 +26,7 @@ tests:
     recfm: "FB"
     lrecl: "35"
     comparable: "true"
-- name: "STRFNE"
+- name: "STRFNL"
   header: "Left"
   description: "Test left function with all types"
   source: "WBXML"
@@ -46,7 +46,7 @@ tests:
     recfm: "FB"
     lrecl: "35"
     comparable: "true"
-- name: "STRFNI"
+- name: "STRFNR"
   header: "Right"
   description: "Test right function with all types"
   source: "WBXML"
