--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -20,18 +20,19 @@ under the License.
 -->
 
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>1.0.2</version>
+		<version>${revision}</version>
 	</parent>
+	<groupId>org.genevaers</groupId>
 	<artifactId>runcontrolgenerator</artifactId>
-	<version>1.0.2</version>
-	<!-- <packaging>jar</packaging> -->
 
 	<name>GenevaERS Run Control Generator</name>
 	<url>https://genevaers.org/</url>
@@ -90,7 +91,16 @@ under the License.
 
 	<build>
 		<plugins>
+			<!-- <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+			</plugin> -->
+
+			<!-- <plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>appassembler-maven-plugin</artifactId>
 				<version>1.10</version>
@@ -116,8 +126,53 @@ under the License.
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
+			<!-- <plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>
+								org.genevaers.runcontrolgenerator.App
+							</mainClass>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
 		</plugins>
+		<!-- <pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.7.1</version>
+					<configuration>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+						<archive>
+							<manifest>
+								<mainClass>org.genevaers.runcontrolgenerator.App</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
+					<executions>
+						<execution>
+							<id>make-assembly</id>
+							<phase>package</phase>
+							<goals>
+								<goal>single</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement> -->
 		<resources>
 			<resource>
 				<filtering>true</filtering>
