--- a/ComponentGenerator/pom.xml
+++ b/ComponentGenerator/pom.xml
@@ -27,12 +27,11 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>1.0.2</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>compgen</artifactId>
 
 	<name>GenevaERS Component Generator</name>
-	<url>https://genevaers.org/</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
