--- a/GenevaIO/pom.xml
+++ b/GenevaIO/pom.xml
@@ -27,7 +27,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>1.0.2</version>
+		<version>${revision}</version>
   	</parent>
 	<artifactId>genevaio</artifactId>
 
