--- a/PETestFramework/pom.xml
+++ b/PETestFramework/pom.xml
@@ -5,54 +5,22 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<licenses>
-		<license>
-			<name>Apache 2.0</name>
-			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
 	<organization>
 		<name>Geneva ERS</name>
 		<url>https://genevaers.org/</url>
 	</organization>
-	<issueManagement>
-		<system>GitHub</system>
-		<url>https://github.ibm.com/SAFR/GenevaERS-Java-Frontend/issues</url>
-	</issueManagement>
-	<scm>
-		<url>https://github.ibm.com/SAFR/GenevaERS-Java-Frontend</url>
-		<connection>scm:git:git:https://github.ibm.com/SAFR/GenevaERS-Java-Fronten.git</connection>
-		<tag>HEAD</tag>
-	</scm>
 
 	<parent>
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
-		<version>1.0.2</version>
+		<version>${revision}</version>
 		<relativePath>../</relativePath>
 	</parent>
 	<artifactId>petestframework</artifactId>
-	<!-- <packaging>pom</packaging> -->
 
 	<name>GenevaERS Test Framework</name>
 	<description>GenevaERS Test Apps</description>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<min.jdk.version>11</min.jdk.version>
-		<maven.compiler.release>8</maven.compiler.release>
-		<maven-version>3.8.4</maven-version>
-		<!-- NOTE: when updating surefire version, double-check Import-Package statements generated
-		by bnd-maven-plugin and possibly adapt instructions in various bnd.bnd files -->
-		<surefire-version>2.22.2</surefire-version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<timestamp>${maven.build.timestamp}</timestamp>
-		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
-	</properties>
-
-	<!--<dependencyManagement> -->
 	<dependencies>
 		<dependency>
 			<groupId>org.genevaers</groupId>
@@ -149,7 +117,6 @@
 			<version>2.4</version>
 		</dependency>
 	</dependencies>
-	<!--</dependencyManagement> -->
 
 	<build>
 		<plugins>
