--- a/Repository/pom.xml
+++ b/Repository/pom.xml
@@ -26,7 +26,7 @@ under the License.
 	<parent>
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
-		<version>1.0.2</version>
+		<version>${revision}</version>
 		<relativePath>../</relativePath>
 	</parent>
 	<artifactId>repository</artifactId>
@@ -62,24 +62,6 @@ under the License.
 
 	<build>
 		<plugins>
-			<!-- <plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.1.1</version>
-				<executions>
-					<execution>
-						<id>generate-components</id>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<phase>generate-sources</phase>
-						<configuration>
-							<executable>target/bin/compgen.bat</executable>
-							<workingDirectory>../ComponentGenerator</workingDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
