--- a/AppChooser/pom.xml
+++ b/AppChooser/pom.xml
@@ -29,7 +29,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>${revision}</version>
+		<version>1.1.0</version>
 	</parent>
 	<groupId>org.genevaers</groupId>
 	<artifactId>appchooser</artifactId>
@@ -48,7 +48,6 @@ under the License.
 		<dependency>
 			<groupId>org.genevaers</groupId>
 			<artifactId>runcontrolgenerator</artifactId>
-			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.genevaers</groupId>
@@ -57,12 +56,10 @@ under the License.
 		<dependency>
 			<groupId>org.genevaers</groupId>
 			<artifactId>utilities</artifactId>
-			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.genevaers</groupId>
 			<artifactId>runcontrolanalyser</artifactId>
-			<version>${revision}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
