--- a/Compilers/pom.xml
+++ b/Compilers/pom.xml
@@ -27,7 +27,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>${revision}</version>
+		<version>1.1.0</version>
   	</parent>
 	<artifactId>compilers</artifactId>
 
