--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -29,7 +29,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>${revision}</version>
+		<version>1.1.0</version>
 	</parent>
 	<groupId>org.genevaers</groupId>
 	<artifactId>runcontrolgenerator</artifactId>
@@ -69,11 +69,14 @@ under the License.
 		<dependency>
 			<groupId>org.genevaers</groupId>
 			<artifactId>runcontrolanalyser</artifactId>
-			<version>1.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.google.flogger</groupId>
