--- a/Utilities/pom.xml
+++ b/Utilities/pom.xml
@@ -25,7 +25,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>${revision}</version>
+		<version>1.1.0</version>
 	</parent>
 	<artifactId>utilities</artifactId>
 	<name>GenevaERS Utilities</name>
