--- a/prebuild/pom.xml
+++ b/prebuild/pom.xml
@@ -32,7 +32,7 @@ under the License.
 	<parent>
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
-		<version>${revision}</version>
+		<version>1.1.0</version>
 		<relativePath>../</relativePath>
 	</parent>
 
