--- a/ComponentGenerator/pom.xml
+++ b/ComponentGenerator/pom.xml
@@ -27,7 +27,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>1.1.0</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>compgen</artifactId>
 
