--- a/PETestFramework/pom.xml
+++ b/PETestFramework/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
-		<version>1.1.0</version>
+		<version>${revision}</version>
 		<relativePath>../</relativePath>
 	</parent>
 	<artifactId>petestframework</artifactId>
