--- a/Repository/pom.xml
+++ b/Repository/pom.xml
@@ -26,7 +26,7 @@ under the License.
 	<parent>
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
-		<version>1.1.0</version>
+		<version>${revision}</version>
 		<relativePath>../</relativePath>
 	</parent>
 	<artifactId>repository</artifactId>
