--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -29,7 +29,7 @@ under the License.
 		<groupId>org.genevaers</groupId>
 		<artifactId>apps</artifactId>
 		<relativePath>../</relativePath>
-		<version>1.1.0</version>
+		<version>${revision}</version>
 	</parent>
 	<groupId>org.genevaers</groupId>
 	<artifactId>runcontrolgenerator</artifactId>
