AppChooser to RCApps
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -131,8 +131,8 @@
             "type": "java",
             "name": "Launch RCG from playpen",
             "request": "launch",
-            "mainClass": "org.genevaers.appchooser.Runner",
-            "projectName": "appchooser",
+            "mainClass": "org.genevaers.rcapps.Runner",
+            "projectName": "rcapps",
             "cwd": "${workspaceFolder}/../../../RunControlPlayPen"
         },
         {
