--- a/PETestFramework/JBaseandExitsspeclist.yaml
+++ b/PETestFramework/JBaseandExitsspeclist.yaml
@@ -28,7 +28,7 @@ specFileSets:
       - "PeTests/FormatReports/NEWP2.yaml"
       - "PeTests/Format/NEWP3.yaml"
   - name: "Error cases"
-    templateSetName: "MR91toPEError.yaml"
+    templateSetName: "GRCGtoPEError.yaml"
     specs:
       - "PeTests/Format/OVERFLW.yaml"
 
