--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<timestamp>${maven.build.timestamp}</timestamp>
 		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 		<!-- our apps -->
-		<revision>1.1.0</revision>
+		<revision>1.1.0_RC1</revision>
 	</properties>
 
 	<licenses>
@@ -50,9 +50,8 @@
 		<module>ComponentGenerator</module>
 		<module>Utilities</module>
 		<module>Repository</module>
-		<module>GenevaIO</module>
 		<module>Compilers</module>
-		<module>PETestFramework</module>
+		<module>GenevaIO</module>
 		<module>RunControlGenerator</module>
 		<module>RunControlAnalyser</module>
 		<module>RCApps</module>
@@ -89,6 +88,11 @@
 			<dependency>
 				<groupId>org.genevaers</groupId>
 				<artifactId>genevaio</artifactId>
+				<version>${revision}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.genevaers</groupId>
+				<artifactId>winio</artifactId>
 				<version>${revision}</version>
 			</dependency>
 			<dependency>
@@ -197,11 +201,6 @@
 				<artifactId>jansi</artifactId>
 				<version>2.4.1</version>
 			</dependency>
-			<dependency>
-				<groupId>com.ibm</groupId>
-				<artifactId>jzos</artifactId>
-				<version>2.4.8</version>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -287,6 +286,37 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>z/os</id>
+			<activation>
+			  <os> 
+				<family>mac</family>
+			  </os>
+			</activation>
+				<modules>
+					<module>PETestFramework</module>
+					<module>ZosIO</module>
+					<module>ZosUtilities</module>
+				</modules>
+			<dependencies>
+				<dependency>
+					<groupId>com.ibm</groupId>
+					<artifactId>jzos</artifactId>
+					<version>2.4.8</version>
+				</dependency>
+			</dependencies>
+			  </profile>	
+		  <profile>
+			<id>windows</id>
+			<activation>
+			  <os> 
+				<family>windows</family>
+			  </os>
+			</activation>
+				<modules>
+					<module>WinIO</module>
+				</modules>
+		  </profile>	
 	</profiles>
 
 </project>
