--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -64,6 +64,10 @@ under the License.
 		</dependency>
 		<dependency>
 			<groupId>org.genevaers</groupId>
+			<artifactId>winio</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.genevaers</groupId>
 			<artifactId>utilities</artifactId>
 		</dependency>
 		<dependency>
@@ -94,88 +98,7 @@ under the License.
 
 	<build>
 		<plugins>
-			<!-- <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-			</plugin> -->
-
-			<!-- <plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>appassembler-maven-plugin</artifactId>
-				<version>1.10</version>
-				<executions>
-					<execution>
-						<id>assemble-script</id>
-						<phase>package</phase>
-						<goals>
-							<goal>assemble</goal>
-						</goals>
-						<configuration>
-							<assembleDirectory>${project.build.directory}/</assembleDirectory>
-							<platforms>
-								<platform>windows</platform>
-								<platform>unix</platform>
-							</platforms>
-							<programs>
-								<program>
-									<mainClass>org.genevaers.runcontrolgenerator.App</mainClass>
-									<id>gvbrcg</id>
-								</program>
-							</programs>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
-			<!-- <plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-						<configuration>
-							<classifier>spring-boot</classifier>
-							<mainClass>
-								org.genevaers.runcontrolgenerator.App
-							</mainClass>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin> -->
 		</plugins>
-		<!-- <pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>3.7.1</version>
-					<configuration>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
-						<archive>
-							<manifest>
-								<mainClass>org.genevaers.runcontrolgenerator.App</mainClass>
-							</manifest>
-						</archive>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
-			</plugins>
-		</pluginManagement> -->
 		<resources>
 			<resource>
 				<filtering>true</filtering>
