parent pom to activate z/os
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -290,7 +290,7 @@
 			<id>z/os</id>
 			<activation>
 			  <os> 
-				<family>mac</family>
+				<family>z/os</family>
 			  </os>
 			</activation>
 				<modules>
