--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -64,10 +64,6 @@ under the License.
 		</dependency>
 		<dependency>
 			<groupId>org.genevaers</groupId>
-			<artifactId>winio</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.genevaers</groupId>
 			<artifactId>utilities</artifactId>
 		</dependency>
 		<dependency>
@@ -111,4 +107,41 @@ under the License.
 		</resources>
 	</build>
 
+	<profiles>
+		<!-- <profile>
+			<id>z/os</id>
+			<activation>
+				<os>
+					<family>z/os</family>
+				</os>
+			</activation>
+			<modules>
+				<module>PETestFramework</module>
+				<module>ZosIO</module>
+				<module>ZosUtilities</module>
+			</modules>
+			<dependencies>
+				<dependency>
+					<groupId>com.ibm</groupId>
+					<artifactId>jzos</artifactId>
+					<version>2.4.8</version>
+				</dependency>
+			</dependencies>
+		</profile> -->
+		<!-- <profile>
+			<id>windows</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.genevaers</groupId>
+					<artifactId>WinIO</artifactId>
+					<version>${revision}</version>
+				</dependency>
+			</dependencies>
+		</profile> -->
+	</profiles>
 </project>
