profile for z/os
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/PETestFramework/pom.xml
+++ b/PETestFramework/pom.xml
@@ -39,6 +39,16 @@
 			<artifactId>utilities</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.genevaers</groupId>
+			<artifactId>zosutilities</artifactId>
+			<version>${revision}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.genevaers</groupId>
+			<artifactId>zosio</artifactId>
+			<version>${revision}</version>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
