--- a/pom.xml
+++ b/pom.xml
@@ -284,15 +284,15 @@
 		<profile>
 			<id>z/os</id>
 			<activation>
-			  <os> 
-				<family>z/os</family>
-			  </os>
+				<os>
+					<family>z/os</family>
+				</os>
 			</activation>
-				<modules>
-					<module>PETestFramework</module>
-					<module>ZosIO</module>
-					<module>ZosUtilities</module>
-				</modules>
+			<modules>
+				<module>PETestFramework</module>
+				<module>ZosIO</module>
+				<module>ZosUtilities</module>
+			</modules>
 			<dependencies>
 				<dependency>
 					<groupId>com.ibm</groupId>
@@ -300,7 +300,7 @@
 					<version>2.4.8</version>
 				</dependency>
 			</dependencies>
-			  </profile>
+		</profile>
 		<profile>
 			<id>windows</id>
 			<activation>
@@ -311,13 +311,15 @@
 			<modules>
 				<module>WinIO</module>
 			</modules>
-			<!-- <dependencies>
-				<dependency>
-					<groupId>org.genevaers</groupId>
-					<artifactId>winio</artifactId>
-					<version>1.1.0_RC1</version>
-				</dependency>
-			</dependencies> -->
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>org.genevaers</groupId>
+						<artifactId>winio</artifactId>
+						<version>1.1.0_RC1</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
 		</profile>
 	</profiles>
 
