--- a/pom.xml
+++ b/pom.xml
@@ -316,7 +316,7 @@
 					<dependency>
 						<groupId>org.genevaers</groupId>
 						<artifactId>winio</artifactId>
-						<version>1.1.0_RC1</version>
+						<version>${revision}</version>
 					</dependency>
 				</dependencies>
 			</dependencyManagement>
