--- a/RunControlAnalyser/pom.xml
+++ b/RunControlAnalyser/pom.xml
@@ -106,6 +106,10 @@ under the License.
 			<groupId>org.fusesource.jansi</groupId>
 			<artifactId>jansi</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -159,6 +163,16 @@ under the License.
 				</executions>
 			</plugin> -->
 		</plugins>
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>application.properties</include>
+					<include>RCARPT.ftl</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
